added some test data and tests

--- a/ODataDBUp/appsettings.json
+++ b/ODataDBUp/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Sql": "Server=localhost\\MSSQLSERVER;Database=ODataTestDb;User Id=sa;Password=admin123;Application Name=ODataDBService"
+    "Sql": "Data Source=WDSEROBU01WK107\\SQLSRV2019;Initial Catalog=ODataTestDB;Persist Security Info=True;User ID=sa;Password=W1nds@ft1234;TrustServerCertificate=true"
   }
 }
