--- a/ODataDBUp/ODataDBUp.csproj
+++ b/ODataDBUp/ODataDBUp.csproj
@@ -9,7 +9,10 @@
 
   <ItemGroup>
     <None Remove="appsettings.json" />
-    <None Remove="Scripts\Script0001- Create Employee.sql" />
+    <None Remove="Scripts\Script0001-Create Employees.sql" />
+    <None Remove="Scripts\Script0002-Create Orders.sql" />
+    <None Remove="Scripts\Script0003-Create EmployeeOrdersView.sql" />
+    <None Remove="Scripts\Script0004-Create SP InsertOrderAndUpdateEmployee.sql" />
   </ItemGroup>
 
   <ItemGroup>
@@ -21,7 +24,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="Scripts\Script0001- Create Employee.sql" />
+    <EmbeddedResource Include="Scripts\Script0004-Create SP InsertOrderAndUpdateEmployee.sql" />
+    <EmbeddedResource Include="Scripts\Script0003-Create EmployeeOrdersView.sql" />
+    <EmbeddedResource Include="Scripts\Script0002-Create Orders.sql" />
+    <EmbeddedResource Include="Scripts\Script0001-Create Employees.sql" />
   </ItemGroup>
 
   <ItemGroup>
