major refactor + SQL command controller
to do:

tests

--- a/ODataDBService/ODataDBService.csproj
+++ b/ODataDBService/ODataDBService.csproj
@@ -6,6 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>7565b8ee-f91e-48d8-9ef9-50a3ecf6759c</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+	<GenerateDocumentationFile>true</GenerateDocumentationFile>
+	<NoWarn>$(NoWarn);1591</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
