--- a/ODataDBUp/ODataDBUp.csproj
+++ b/ODataDBUp/ODataDBUp.csproj
@@ -13,6 +13,7 @@
     <None Remove="Scripts\Script0002-Create Orders.sql" />
     <None Remove="Scripts\Script0003-Create EmployeeOrdersView.sql" />
     <None Remove="Scripts\Script0004-Create SP InsertOrderAndUpdateEmployee.sql" />
+    <None Remove="Scripts\Script0005-Create Products.sql" />
   </ItemGroup>
 
   <ItemGroup>
@@ -24,6 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Scripts\Script0005-Create Products.sql" />
     <EmbeddedResource Include="Scripts\Script0004-Create SP InsertOrderAndUpdateEmployee.sql" />
     <EmbeddedResource Include="Scripts\Script0003-Create EmployeeOrdersView.sql" />
     <EmbeddedResource Include="Scripts\Script0002-Create Orders.sql" />
