--- a/ODataDBService/ODataDBService.csproj
+++ b/ODataDBService/ODataDBService.csproj
@@ -8,6 +8,8 @@
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
 	<GenerateDocumentationFile>true</GenerateDocumentationFile>
 	<NoWarn>$(NoWarn);1591</NoWarn>
+    <CodeAnalysisRuleSet>CustomRules.ruleset</CodeAnalysisRuleSet>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
 
   <ItemGroup>
@@ -19,6 +21,8 @@
     <EmbeddedResource Remove="NewFolder\**" />
     <None Remove="Data Access Layer\**" />
     <None Remove="NewFolder\**" />
+    <Compile Remove="asda.cs" />
+    <Compile Remove="GlobalSupressions.cs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -26,6 +30,15 @@
     <PackageReference Include="DynamicODataToSQL" Version="1.0.7" />
     <PackageReference Include="Flurl" Version="3.0.7" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.435">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Remove="stylecop.json" />
+    <AdditionalFiles Include="stylecop.json" />
   </ItemGroup></Project>
