refactored code, added more tests, fixed edge cases

--- a/ODataDBTester/ODataDBTester.csproj
+++ b/ODataDBTester/ODataDBTester.csproj
@@ -40,4 +40,8 @@
     <ProjectReference Include="..\ODataDBService\ODataDBService.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Tests\" />
+  </ItemGroup>
+
 </Project>
