--- a/ODataDBUp/ODataDBUp.csproj
+++ b/ODataDBUp/ODataDBUp.csproj
@@ -25,11 +25,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="Scripts\Script0005-Create Products.sql" />
-    <EmbeddedResource Include="Scripts\Script0004-Create SP InsertOrderAndUpdateEmployee.sql" />
-    <EmbeddedResource Include="Scripts\Script0003-Create EmployeeOrdersView.sql" />
-    <EmbeddedResource Include="Scripts\Script0002-Create Orders.sql" />
     <EmbeddedResource Include="Scripts\Script0001-Create Employees.sql" />
+    <EmbeddedResource Include="Scripts\Script0002-Create Orders.sql" />
+    <EmbeddedResource Include="Scripts\Script0003-Create EmployeeOrdersView.sql" />
+    <EmbeddedResource Include="Scripts\Script0004-Create SP InsertOrderAndUpdateEmployee.sql" />
+    <EmbeddedResource Include="Scripts\Script0005-Create Products.sql" />
+    <EmbeddedResource Include="Scripts\Script0006-Create CustomerOrder.sql" />
   </ItemGroup>
 
   <ItemGroup>
