--- a/ODataDBTester/appsettings.json
+++ b/ODataDBTester/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Sql": "Data Source=WDSEROBU01WK107\\SQLSRV2019;Initial Catalog=ODataTestDB;Persist Security Info=True;User ID=sa;Password=W1nds@ft1234;TrustServerCertificate=true"
+    "Sql": "Data Source=127.0.0.1\\SQLSRV2019;Initial Catalog=ODataTestDB;Persist Security Info=True;User ID=sa;Password=W1nds@ft1234;TrustServerCertificate=true"
   }
 }
