--- a/ODataDBService/Dockerfile
+++ b/ODataDBService/Dockerfile
@@ -7,8 +7,8 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
-COPY ["ODataDBService/ODataDBService.csproj", "ODataDBService/"]
-RUN dotnet restore "ODataDBService/ODataDBService.csproj"
+COPY ["ODataDBService.csproj", "ODataDBService/"]
+RUN dotnet restore "ODataDBService.csproj"
 COPY . .
 WORKDIR "/src/ODataDBService"
 RUN dotnet build "ODataDBService.csproj" -c Release -o /app/build
