--- a/ODataDBService/Dockerfile
+++ b/ODataDBService/Dockerfile
@@ -9,7 +9,7 @@ FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
 COPY ["ODataDBService.csproj", "ODataDBService/"]
 RUN dotnet restore "ODataDBService/ODataDBService.csproj"
-COPY . .
+COPY ["ODataDBService", "ODataDBService/"]
 WORKDIR "/src/ODataDBService"
 RUN dotnet build "ODataDBService.csproj" -c Release -o /app/build
 
